fix blockquote text-align

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -100,7 +100,7 @@
     font-family: font-serif
     font-size: 1.4em
     margin: line-height 20px
-    text-align: center
+    text-align: left
     footer
       font-size: font-size
       margin: line-height 0
